fix the vertical alignment of select components

--- a/addon/styles/g-input.css
+++ b/addon/styles/g-input.css
@@ -19,7 +19,7 @@
 	font-weight: bold;
 	font-size: 12px;
 	line-height: 22px;
-	vertical-align: top;
+	/*vertical-align: top;*/
 	font-family: arial,tahoma,verdana,helvetica;
 }
 .g-valid {
