--- a/addon/styles/g-selectize.css
+++ b/addon/styles/g-selectize.css
@@ -3,6 +3,7 @@
 	font-family: arial,tahoma,verdana,helvetica;
   line-height: 18px;
   width: 190px;
+  width: 15.7em;
 }
 .selectize-input {
   padding: 2px;
@@ -11,16 +12,13 @@
   width: 196px;
 }
 .selectize-input > input {
-  display: inline-block;;
+  display: inline-block;
 }
 .selectize-control {
   display: inline-block;
-  height: 18px;
-  vertical-align: top;
+  height: 26px;
+  vertical-align: middle;
 }
 .selectize-control.single .selectize-input, .selectize-dropdown.single {
 	border: 1px solid #a9bfd3;
 }
-/*.g-selectize-invalid > .selectize-control.single .selectize-input {
-	border: 1px solid red;
-}*/
