--- a/addon/styles/g-toolbar.css
+++ b/addon/styles/g-toolbar.css
@@ -11,6 +11,13 @@
 	font-family: arial,tahoma,verdana,helvetica;
 	font-size: 12px;
 }
+
+
+
 .g-toolbar form {
 	display: inline-block;
+}
+.g-toolbar .g-input-field-label {
+	min-width: auto;
+	padding-right: 4px;
 }
